2008-06-17  Miles Bader  <miles@gnu.org>

	* mouse.el (mouse-appearance-menu): Use buffer-face-mode.

	* face-remap.el (buffer-face-mode-face)
	(buffer-face-mode-remapping): New variables.
	(buffer-face-mode, buffer-face-set, buffer-face-toggle)
	(buffer-face-mode-invoke): New functions.
	(variable-pitch-mode-remapping): Variable removed.
	(variable-pitch-mode): Rewrite as an interface to `buffer-face-mode'.

	* face-remap.el (internal-lisp-face-attributes): New variable.
	(face-attrs-more-relative-p, face-remap-order): New functions.
	(face-remap-add-relative): Use `face-remap-order'.

2008-06-17  Glenn Morris  <rgm@gnu.org>

	* mouse.el (x-select-font): Declare.

	* calendar/calendar.el (calendar-move-hook):
	Add calendar-update-mode-line as an option.
	(calendar-date-echo-text): New user option.
	(calendar-generate-month): Set `day'.  Use calendar-date-echo-text.
	(calendar-insert-indented): Simplify newline insertion.
	(calendar-describe-mode): Remove unused function.
	(calendar-mode-line-entry): New function.
	(calendar-mode-line-format): Doc fix.  Use calendar-mode-line-entry.
	Mark as risky.
	(calendar-mouse-other-month): Remove function.
	(calendar-other-month): Handle mouse events.
	(calendar-goto-info-node): Call fit-window-to-buffer.
	(calendar-mode): Use define-derived-mode.  Doc fix.
	(calendar-update-mode-line): Tweak whitespace.

2008-06-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-dispatcher.el (vc-dir-child-files): Use vc-string-prefix-p.
	(vc-dir-marked-only-files): vc-string-prefix-p.

2008-06-16  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-memory-set-address)
	(gdb-memory-set-repeat-count): Allow keyboard bindings.
	(gdb-memory-mode-map): Bind above functions respectively
	to 'S' and 'N'.

2008-06-16  Derek Upham  <sand@blarg.net>  (tiny change)

	* nxml/nxml-mode.el (nxml-mode): Use run-mode-hooks.

2008-06-16  Juanma Barranquero  <lekktu@gmail.com>

	* log-view.el (vc-diff-internal): Declare for compiler.
